# fast_api_study

./: .dockerignore  Dockerfile  README.md  database.py  main.py  pyproject.toml  repository.py  req.txt  routers.py  schemas.py
